Fix border radius on iOS

--- a/projects/DigitPop-Player/src/app/video/video.component.scss
+++ b/projects/DigitPop-Player/src/app/video/video.component.scss
@@ -651,6 +651,8 @@
   position: relative;
   background: none;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 
   &:before,
   &:after {
@@ -664,6 +666,8 @@
     margin: auto;
     background-color: #fff6df;
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
     transform: scale(0.5);
     transform-origin: center center;
     animation: pulse 3s linear infinite;
@@ -680,6 +684,8 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 
 .start-quiz:hover {
